recipes-extended/iptables/iptables/iptables.rules
# Generated by iptables-save v1.8.10 on Tue May  6 19:48:23 2025
*filter
:INPUT ACCEPT [7625:1198148]
:FORWARD ACCEPT [2618:2163340]
:OUTPUT ACCEPT [4991:512298]
-A FORWARD -i eth1 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth1 -o wwan0 -j ACCEPT
-A FORWARD -i wwan0 -o eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -j ACCEPT
COMMIT
# Completed on Tue May  6 19:48:23 2025
# Generated by iptables-save v1.8.10 on Tue May  6 19:48:23 2025
*nat
:PREROUTING ACCEPT [3339:441813]
:INPUT ACCEPT [1698:185986]
:OUTPUT ACCEPT [1454:112247]
:POSTROUTING ACCEPT [505:39372]
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o wwan0 -j MASQUERADE
COMMIT
# Completed on Tue May  6 19:48:23 2025
